--- a/package.json
+++ b/package.json
@@ -16,9 +16,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "dayjs": "^1.11.13",
+    "i18next": "^24.0.5",
+    "i18next-browser-languagedetector": "^8.0.0",
+    "i18next-http-backend": "^3.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
+    "react-i18next": "^15.1.3",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.27.0",
     "styled-components": "^6.1.13",
