--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.8.2",
     "dayjs": "^1.11.13",
+    "file-saver": "^2.0.5",
     "i18next": "^24.0.5",
     "i18next-browser-languagedetector": "^8.0.0",
     "i18next-http-backend": "^3.0.1",
@@ -28,6 +30,7 @@
     "styled-components": "^6.1.13",
     "supabase": "^1.226.3",
     "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5",
     "xregexp": "^5.1.1"
   },
   "scripts": {
